Fixed align-content bug

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,6 +1,7 @@
 .layout-container {
   display: flex;
   flex-direction: row;
+  align-content: flex-start;
   flex-wrap: wrap;
   padding: var(--padding-md);
   height: 100%;
